--- a/style.css
+++ b/style.css
@@ -10,3 +10,21 @@ h1 {
   text-align: center;
   font-size: 72px;
 }
+
+#button {
+  background-color: #B0C4DE;
+  border: none;
+  padding: 40px 60px;
+  font-size: 25px;
+  text-align: center;
+  display: grid;
+  border-radius: 12px;
+}
+
+.image-box{
+  display: block;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
