--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1 {
   padding: 40px 60px;
   font-size: 25px;
   text-align: center;
-  display: inline-block;
+  display: grid;
   border-radius: 12px;
 }
 
