--- a/style.css
+++ b/style.css
@@ -11,20 +11,16 @@ h1 {
   font-size: 72px;
 }
 
-#button {
-  background-color: #B0C4DE;
-  border: none;
-  padding: 40px 60px;
-  font-size: 25px;
+#start {
+  width: 50%;
+  padding: 50px 0;
   text-align: center;
-  display: grid;
-  border-radius: 12px;
+  background-color: lightblue;
+  margin-top: 20px;
+  font-size: 72px;
 }
 
-.image-box{
-  display: block;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+#num {
+  display: none;
 }
 
