--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ h1 {
   background-color: lightblue;
   margin-top: 20px;
   font-size: 72px;
+  border: hidden;
+  border-radius: 40%;
 }
 
 #num {
@@ -26,4 +28,12 @@ h1 {
 
 #resume {
   display: none;
+  width: 50%;
+  padding: 50px 0;
+  text-align: center;
+  background-color: rgb(235, 231, 25);
+  margin-top: 20px;
+  font-size: 72px;
+  border: hidden;
+  border-radius: 40%;
 }
